Advanced moltemplate usage: Alchemical transformations

--- a/doc/moltemplate_manual_src/moltemplate_manual.tex
+++ b/doc/moltemplate_manual_src/moltemplate_manual.tex
@@ -32,6 +32,23 @@
 %\setcounter{figure}{7}
 %\setcounter{table}{8}
 
+% Custom callout box
+\usepackage{mdframed,xcolor}  
+\definecolor{darkcyan}{HTML}{0091A4}  
+\definecolor{brightcyan}{HTML}{dcf0f2}
+\newmdenv[
+topline=false,  
+rightline=false,  
+bottomline=false,  
+leftline=true,  
+linecolor=darkcyan,  
+linewidth=3pt,  
+backgroundcolor=brightcyan,  
+frametitle=Warning!
+]{warning} 
+
+% empty bullets to emulate the description environment with verbatim command.
+\newcommand{\vitem}{\item[] \hspace{-27.5pt}}
 \begin{document}
 
 \author{
@@ -4827,6 +4844,71 @@ A {
   %\textit{I will finish this example later...}
 
 
+\subsection{Alchemical transformations}
+\label{sec:alchemical}
+
+In molecular modelling, an alchemical transformation involves transforming e.g. one atom type into a different one.
+LAMMPS already provides a \verb|fix alchemy| command, which is used for measuring thermodynamic differences between two different systems.
+This command is used to alter the composition of a system \textit{during} a molecular dynamic simulation, and relies on defining groups
+using the standard LAMMPS syntax.
+
+In moltemplate, alchemical transformations are used to change the type of individual atoms (and ultimately, the
+molecular species) and associated bonded interactions \textit{after} a sample has been created. These transformations can be seen as a
+post-processing modification of the ``Data Atoms.template'' file that is carried out right after executing \verb|ttree.py| in the moltemplate workflow,
+but before the force field lookup occurs.
+In this way, all \textit{bonded} force field terms are also updated, while preserving the atomic coordinates in the sample's reference system.\\
+%
+Alchemical transformations are triggered by a \verb|write_once("Postprocess")| command issued after the creation of molecules with the \verb|new| command.
+%
+Alchemical transformations are controlled using the LAMMPS' \verb|set atom| command. Currently, moltemplate can process the following keywords:
+\begin{itemize}
+	\vitem \verb|set atom ID type TYPE-ID|\hskip2ex This command will change the atom type of a specific atom in the ``Atoms'' section of the DATA file.
+	\vitem \verb|set atom ID shape SIGX SIGY SIGZ|\hskip2ex This command will change the ellipsoid diameters of a specific atom in the ``Ellipsoids'' section of the DATA file, if the atom style includes ellipsoids.
+\end{itemize}
+%
+The \verb|ID| is specified using moltemplate's internal identifiers, as in the ``Data Atoms.template'' file. Wildcard notation is supported for selecting atoms IDs.
+The \verb|TYPE-ID| is specified using the same variables in the force field definition, with the additional prefix if the ``inherits'' keyword was used to inherit attributes.
+
+These commands are parsed by the script alchemical.py: this tool is designed to be easily expanded, covering other properties or ways of selecting which elements to alter, e.g. molecular indexes.
+
+\begin{warning}  
+	The \verb|write_once("Postprocess")|is \underline{case sensitive}. The commands spe\-ci\-fied in this block are only used for modifying the atoms types and/or shapes in the DATA file and will not appear in the master input file (e.g. ``system.in'').
+\end{warning}
+
+In the following excerpt, three ethane molecules are created and cumulatively shifted along a vector. The third molecule is transformed from ethane to methanol by deleting two hydrogen atoms in the same methyl group, and then changing the atom types of all atoms in the selected molecule:
+%
+\begin{verbatim}
+# 1. Create the sample: 3 ethane molecules.
+mol1 = new ETH[3].move(5.0, 2.0, 2.0)	
+
+# 2. Delete the extra atoms of molecule 3
+delete mol1[2]/H5
+delete mol1[2]/H6
+
+# 3. Replace all atomtypes, transforming ethanol in methanol.
+write("Postprocess") {
+	set atom mol1[2]/C1 type @atom:OPLSAA/99
+	set ATOM mol1[2]/H1 type @atom:OPLSAA/98
+	SET ATOM mol1[2]/H2 TYPE @atom:OPLSAA/98
+	SET atom mol1[2]/H3 TYPE @atom:OPLSAA/98
+	set atom mol1[2]/C2 type @atom:OPLSAA/96
+	set atom mol1[2]/H4 type @atom:OPLSAA/97
+}
+\end{verbatim}
+
+This excerpt demonstrates how to change the atom ID of ellipsoid particles, which involves changing both the atom type and the ellipsoid diameters in the DATA file:
+\begin{verbatim}
+# 1. Create the sample: 3*3*3 grid of benzene molecules.
+mol0 = new BENZ[3].move(6.5, 0, 0)
+               [3].move(0, 6.5, 0)
+               [3].move(0, 0, 6.5)
+
+# 2. Transform a plane of disks into rods.
+write_once("Postprocess") {
+	set atom mol0[*][*][2]/ben type @atom:ROD/b1
+	set atom mol0[*][*][2]/ben shape 2.5 2.5 6.5
+}
+\end{verbatim}
 
 \section{Known bugs and limitations}
 \label{sec:limitations}
